tdf#134385 doc/docxexport: maybe export false contextualspacing

Instead of LO 4.2's solution of never exporting false,
export if the inherited value would be true.
Otherwise there is no way to override an inherited value.

RTF doesn't have a "false" version of
\contextualspace, so I ignored that format.

Change-Id: I6d05eb9a5d3fbfbfca0fddd7eda0c230baa25c5c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113064
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>